--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Ejercicio desde Node en OpenBootCamp",
   "main": "index.js",
   "scripts": {
+    "mensaje":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
